--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<html>
+<head>
+	<title>Turnkey</title>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+<div class="flex-div">
+	<div class="phone-input-container">
+        <div class="select-container">
+                    <option value="us">
+                        United States +1
+                    </option>
+        </div>
+
+        <input
+            type="tel"
+            
+            placeholder="Enter phone number"
+            class="phone-input"
+            class:valid={isValid}
+        />
+    </div>
+</div>
+
+</body>
+</html>
