--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
 <body>
 <div class="flex-div">
+	<div>
+		<h2 class="register">Register for Turnkey</h2>
+	</div>
+	<div>
 	<div class="phone-input-container">
 
         <input
@@ -15,7 +19,9 @@
             class="phone-input"
             class:valid={isValid}
         />
+        <button class="verify-button">Send verification code</button>
     </div>
+</div>
 </div>
 
 </body>
